# Curso-Rust-rocket-api

./: .env  Cargo.toml  Rocket.toml
src/: main.rs  models.rs  schema.rs
