[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.1.6", features = ["postgres", "r2d2", "uuid"] }
env_logger = "0.11.3"
log = "0.4.21"
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = "0.7.10"
uuid = { version = "1.8.0", features = ["serde", "v4", "v7"] }
